--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "formik": "^2.2.9",
     "moment": "^2.29.1",
+    "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
     "react-datepicker": "^4.1.1",
